# 4D_Sequence

./: CMakeLists.txt  README.md  演示文档.docx
001/: patient001.mrb  patient001.seq.nrrd
002/: patient002.mrb  patient002.seq.nrrd
Bundler/: Bundler.py  CMakeLists.txt
Bundler/Resources/UI/: Bundler.ui
